# traitclaw

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: ci.yml  docs.yml  sync-org.yml  sync-to-org.yml
_bmad-output/: architecture.md  epics.md  project-context.md
_bmad-output/planning-artifacts/: architecture.md  (+23 more)
crates/baseclaw/: Cargo.toml  README.md
crates/baseclaw-anthropic/: Cargo.toml  README.md
crates/baseclaw-anthropic/src/: convert.rs  lib.rs  provider.rs  wire.rs
crates/baseclaw-core/: Cargo.toml  README.md
crates/baseclaw-core/src/: agent.rs  agent_builder.rs  config.rs  error.rs  lib.rs  retry.rs  runtime.rs  streaming.rs  traits.rs  types.rs
crates/baseclaw-core/src/memory/: in_memory.rs
crates/baseclaw-core/src/traits/: execution_strategy.rs  hint.rs  memory.rs  provider.rs  tool.rs  tracker.rs
crates/baseclaw-core/src/types/: action.rs  agent_state.rs  completion.rs  message.rs  model_info.rs  stream.rs  tool_call.rs
crates/baseclaw-core/tests/: integration.rs
crates/baseclaw-eval/: Cargo.toml  README.md
crates/baseclaw-eval/src/: lib.rs
crates/baseclaw-macros/: Cargo.toml  README.md
crates/baseclaw-macros/src/: lib.rs
crates/baseclaw-macros/tests/: derive_tool.rs
crates/baseclaw-mcp/: Cargo.toml  README.md
crates/baseclaw-mcp/src/: lib.rs  protocol.rs  server.rs  tool.rs
crates/baseclaw-memory-sqlite/: Cargo.toml  README.md
crates/baseclaw-memory-sqlite/src/: lib.rs
crates/baseclaw-openai/: Cargo.toml  README.md
crates/baseclaw-openai-compat/: Cargo.toml  README.md
crates/baseclaw-openai-compat/src/: convert.rs  lib.rs  provider.rs  wire.rs
crates/baseclaw-openai/src/: lib.rs  models.rs  structured.rs
crates/baseclaw-rag/: Cargo.toml  README.md
crates/baseclaw-rag/src/: lib.rs
crates/baseclaw-steering/: Cargo.toml  README.md
crates/baseclaw-steering/src/: lib.rs  steering.rs
crates/baseclaw-steering/src/guards/: loop_detection.rs  mod.rs  prompt_injection.rs  shell_deny.rs  tool_budget.rs  workspace_boundary.rs
crates/baseclaw-steering/src/hints/: budget.rs  misc.rs  mod.rs  system_reminder.rs
crates/baseclaw-steering/src/trackers/: adaptive.rs  mod.rs
crates/baseclaw-team/: Cargo.toml  README.md
crates/baseclaw-team/src/: lib.rs
crates/baseclaw/src/: lib.rs
crates/traitclaw/: Cargo.toml  README.md
crates/traitclaw-anthropic/: Cargo.toml  README.md
crates/traitclaw-anthropic/src/: convert.rs  lib.rs  provider.rs  wire.rs
crates/traitclaw-core/: Cargo.toml  README.md
crates/traitclaw-core/src/: agent.rs  agent_builder.rs  config.rs  context_managers.rs  default_strategy.rs  error.rs  factory.rs  lib.rs  memory.rs  pool.rs  registries.rs  runtime.rs  streaming.rs  test_utils.rs  token_counter.rs  token_counting.rs  traits.rs  transformers.rs  types.rs
crates/traitclaw-core/src/memory/: compressed.rs  in_memory.rs
crates/traitclaw-core/src/runtime/: mod.rs  tests_basic.rs  tests_guards.rs  tests_hooks.rs
crates/traitclaw-core/src/traits/: context_manager.rs  context_strategy.rs  execution_strategy.rs  guard.rs  hint.rs  hook.rs  memory.rs  output_processor.rs  output_transformer.rs  provider.rs  strategy.rs  tool.rs  tool_registry.rs
crates/traitclaw-core/src/types/: action.rs  completion.rs  message.rs  model_info.rs  stream.rs  tool_call.rs
crates/traitclaw-core/tests/: integration.rs  runtime_basic.rs  runtime_guards.rs  runtime_hooks.rs  transformers.rs
crates/traitclaw-eval/: Cargo.toml  README.md
crates/traitclaw-eval/src/: export.rs  lib.rs  metrics.rs  runner.rs
crates/traitclaw-macros/: Cargo.toml  README.md
crates/traitclaw-macros/src/: lib.rs
crates/traitclaw-macros/tests/: derive_tool.rs
crates/traitclaw-mcp/: Cargo.toml  README.md
crates/traitclaw-mcp/src/: lib.rs  multi_server.rs  registry.rs  server.rs  tool.rs
crates/traitclaw-memory-sqlite/: Cargo.toml  README.md
crates/traitclaw-memory-sqlite/src/: lib.rs
crates/traitclaw-openai/: Cargo.toml  README.md
crates/traitclaw-openai-compat/: Cargo.toml  README.md
crates/traitclaw-openai-compat/src/: convert.rs  lib.rs  provider.rs  retry.rs
crates/traitclaw-openai/src/: lib.rs  models.rs  structured.rs
crates/traitclaw-rag/: Cargo.toml  README.md
crates/traitclaw-rag/src/: chunker.rs  embedding.rs  hybrid.rs  lib.rs  rag_context.rs
crates/traitclaw-steering/: Cargo.toml  README.md
crates/traitclaw-steering/src/: lib.rs  steering.rs
crates/traitclaw-steering/src/guards/: content_filter.rs  loop_detection.rs  mod.rs  prompt_injection.rs  rate_limit.rs  shell_deny.rs  tool_budget.rs  workspace_boundary.rs
crates/traitclaw-steering/src/hints/: budget.rs  misc.rs  mod.rs  system_reminder.rs
crates/traitclaw-steering/src/trackers/: adaptive.rs  mod.rs
crates/traitclaw-strategies/: Cargo.toml  README.md
crates/traitclaw-strategies/src/: lib.rs  streaming.rs  test_utils.rs
crates/traitclaw-strategies/src/common/: mod.rs  thought_step.rs
crates/traitclaw-strategies/src/cot/: mod.rs  strategy.rs
crates/traitclaw-strategies/src/mcts/: mod.rs  scoring.rs  strategy.rs
crates/traitclaw-strategies/src/react/: mod.rs  strategy.rs
crates/traitclaw-team/: Cargo.toml  README.md
crates/traitclaw-team/src/: conditional_router.rs  execution.rs  group_chat.rs  lib.rs  router.rs  team_context.rs  tests_common.rs
crates/traitclaw-test-utils/: Cargo.toml  README.md
crates/traitclaw-test-utils/src/: lib.rs  memory.rs  provider.rs  runtime.rs  tools.rs
crates/traitclaw/src/: lib.rs
docs/: migration-v0.1-to-v0.2.md  migration-v0.2-to-v0.3.md  migration-v0.3-to-v0.4.md  migration-v0.4-to-v0.5.md  migration-v0.5-to-v0.6.md  migration-v0.7-to-v0.8.md  migration-v0.8-to-v0.9.md
examples/02-tool-calling/: Cargo.toml  README.md
examples/02-tool-calling/src/: main.rs
examples/03-streaming/: Cargo.toml  README.md
examples/03-streaming/src/: main.rs
examples/04-steering/: Cargo.toml  README.md
examples/04-steering/src/: main.rs
scripts/: publish.sh  sync-org.sh
website/: astro.config.mjs  package-lock.json  package.json
(+212 files in other folders)
