[workspace]
resolver = "2"
members = [
    "crates/traitclaw",
    "crates/traitclaw-core",
    "crates/traitclaw-macros",
    "crates/traitclaw-openai-compat",
    "crates/traitclaw-anthropic",
    "crates/traitclaw-openai",
    "crates/traitclaw-steering",
    "crates/traitclaw-memory-sqlite",
    "crates/traitclaw-mcp",
    "crates/traitclaw-rag",
    "crates/traitclaw-team",
    "crates/traitclaw-eval",
    "examples/01-hello-agent",
    "examples/02-tool-calling",
    "examples/03-streaming",
    "examples/04-steering",
    "examples/05-structured-output",
    "examples/06-memory-persistence",
    "examples/07-rag-pipeline",
    "examples/08-eval-suite",
    "examples/09-multi-agent",
    "examples/10-mcp-client",
    "examples/11-custom-strategy",
    "examples/12-lifecycle-hooks",
    "examples/13-custom-router",
    "examples/14-compressed-memory",
    "showcase/miniclaw",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
license = "MIT OR Apache-2.0"
repository = "https://github.com/traitclaw/traitclaw"
description = "A Rust AI Agent Framework — Simple by default, powerful when needed"

[workspace.dependencies]
# Core
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
async-trait = "0.1"
thiserror = "2"
tracing = "0.1"
uuid = { version = "1", features = ["v4"] }

# Schema
schemars = "0.8"

# HTTP
reqwest = { version = "0.12", features = ["json", "stream"] }

# Proc macros
syn = { version = "2", features = ["full"] }
quote = "1"
proc-macro2 = "1"

# Workspace crates
traitclaw-core = { path = "crates/traitclaw-core", version = "0.1.0" }
traitclaw-macros = { path = "crates/traitclaw-macros", version = "0.1.0" }
traitclaw-openai-compat = { path = "crates/traitclaw-openai-compat", version = "0.1.0" }
traitclaw-anthropic = { path = "crates/traitclaw-anthropic", version = "0.1.0" }
traitclaw-openai = { path = "crates/traitclaw-openai", version = "0.1.0" }
traitclaw-steering = { path = "crates/traitclaw-steering", version = "0.1.0" }
traitclaw-memory-sqlite = { path = "crates/traitclaw-memory-sqlite", version = "0.1.0" }
traitclaw-mcp = { path = "crates/traitclaw-mcp", version = "0.1.0" }
traitclaw-rag = { path = "crates/traitclaw-rag", version = "0.1.0" }
traitclaw-team = { path = "crates/traitclaw-team", version = "0.1.0" }
traitclaw-eval = { path = "crates/traitclaw-eval", version = "0.1.0" }
