[workspace]
resolver = "2"
members = [
    "crates/traitclaw",
    "crates/traitclaw-core",
    "crates/traitclaw-macros",
    "crates/traitclaw-openai-compat",
    "crates/traitclaw-anthropic",
    "crates/traitclaw-openai",
    "crates/traitclaw-steering",
    "crates/traitclaw-memory-sqlite",
    "crates/traitclaw-mcp",
    "crates/traitclaw-rag",
    "crates/traitclaw-team",
    "crates/traitclaw-eval",
    "crates/traitclaw-strategies",
    "crates/traitclaw-test-utils",
    "examples/01-hello-agent",
    "examples/02-tool-calling",
    "examples/03-streaming",
    "examples/04-steering",
    "examples/05-structured-output",
    "examples/06-memory-persistence",
    "examples/10-mcp-client",
    "examples/11-custom-strategy",
    "examples/12-lifecycle-hooks",
    "examples/13-custom-router",
    "examples/14-compressed-memory",
    "examples/15-context-manager",
    "examples/16-output-transformer",
    "examples/17-dynamic-tools",
    "examples/18-context-managers",
    "examples/19-grouped-registry",
    "examples/20-mcp-tool-registry",
    "examples/21-rag-pipeline",
    "examples/22-multi-agent-team",
    "examples/23-eval-runner",
    "examples/24-agent-factory",
    "examples/25-reasoning-strategies",
    "examples/26-observability",
    "showcase/miniclaw",
]

[workspace.package]
version = "1.0.0"
edition = "2021"
rust-version = "1.75"
license = "MIT OR Apache-2.0"
repository = "https://github.com/traitclaw/traitclaw"
description = "A Rust AI Agent Framework — Simple by default, powerful when needed"

[workspace.dependencies]
# Core
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
async-trait = "0.1"
thiserror = "2"
tracing = "0.1"
uuid = { version = "1", features = ["v4"] }
regex = "1"

# Schema
schemars = "0.8"

# HTTP
reqwest = { version = "0.12", features = ["json", "stream"] }

# Proc macros
syn = { version = "2", features = ["full"] }
quote = "1"
proc-macro2 = "1"

# Workspace crates
traitclaw-core = { path = "crates/traitclaw-core", version = "1.0.0" }
traitclaw-macros = { path = "crates/traitclaw-macros", version = "1.0.0" }
traitclaw-openai-compat = { path = "crates/traitclaw-openai-compat", version = "1.0.0" }
traitclaw-anthropic = { path = "crates/traitclaw-anthropic", version = "1.0.0" }
traitclaw-openai = { path = "crates/traitclaw-openai", version = "1.0.0" }
traitclaw-steering = { path = "crates/traitclaw-steering", version = "1.0.0" }
traitclaw-memory-sqlite = { path = "crates/traitclaw-memory-sqlite", version = "1.0.0" }
traitclaw-mcp = { path = "crates/traitclaw-mcp", version = "1.0.0" }
traitclaw-rag = { path = "crates/traitclaw-rag", version = "1.0.0" }
traitclaw-team = { path = "crates/traitclaw-team", version = "1.0.0" }
traitclaw-eval = { path = "crates/traitclaw-eval", version = "1.0.0" }
traitclaw-strategies = { path = "crates/traitclaw-strategies", version = "1.0.0" }

# Workspace-wide lint configuration
# Per-crate pedantic lints are advisory (warn); CI enforces default-level warnings via clippy -- -D warnings.
# Pedantic-level lints from Rust 1.94+ are intentionally allowed until a dedicated cleanup story.
[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
# --- Allowed pedantic lints (noisy or not applicable) ---
module_name_repetitions = "allow"
doc_markdown = "allow"
missing_panics_doc = "allow"
missing_errors_doc = "allow"
must_use_candidate = "allow"
semicolon_if_nothing_returned = "allow"
redundant_closure = "allow"
redundant_closure_for_method_calls = "allow"
format_push_string = "allow"
cast_precision_loss = "allow"
cast_sign_loss = "allow"
cast_possible_truncation = "allow"
cast_lossless = "allow"
match_wildcard_for_single_variants = "allow"
manual_let_else = "allow"
match_same_arms = "allow"
if_not_else = "allow"
manual_string_new = "allow"
items_after_statements = "allow"
uninlined_format_args = "allow"
redundant_else = "allow"
unnecessary_wraps = "allow"
trivially_copy_pass_by_ref = "allow"
map_unwrap_or = "allow"
single_match_else = "allow"
implicit_hasher = "allow"
return_self_not_must_use = "allow"
needless_pass_by_value = "allow"
explicit_counter_loop = "allow"
inefficient_to_string = "allow"
int_plus_one = "allow"
missing_fields_in_debug = "allow"
too_many_lines = "allow"
unnecessary_map_or = "allow"
unused_async = "allow"
write_literal = "allow"
needless_borrows_for_generic_args = "allow"
unnecessary_literal_bound = "allow"
wildcard_imports = "allow"
used_underscore_items = "allow"
