[package]
name = "baseclaw-eval"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Evaluation framework for BaseClaw — test suites, metrics, and report generation"

[dependencies]
baseclaw-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
