[package]
name = "baseclaw-macros"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Proc macros for the BaseClaw AI Agent Framework"

[lib]
proc-macro = true

[dependencies]
syn = { workspace = true }
quote = { workspace = true }
proc-macro2 = { workspace = true }
schemars = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
baseclaw-core = { workspace = true }
async-trait = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
