[package]
name = "baseclaw-mcp"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "MCP (Model Context Protocol) client for BaseClaw — discover and call tools from MCP servers"

[dependencies]
baseclaw-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
