[package]
name = "baseclaw-memory-sqlite"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "SQLite memory backend for BaseClaw — persistent conversations and FTS5 recall"

[dependencies]
baseclaw-core = { workspace = true }
rusqlite = { version = "0.33", features = ["bundled"] }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
uuid = { workspace = true }
