[package]
name = "baseclaw-openai-compat"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "OpenAI-compatible provider for BaseClaw (covers OpenAI, Ollama, Groq, Mistral, vLLM, Azure)"

[dependencies]
baseclaw-core = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
bytes = "1"
