[package]
name = "baseclaw-openai"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "OpenAI provider for BaseClaw with structured output and ergonomic constructors"

[dependencies]
baseclaw-core = { workspace = true }
baseclaw-openai-compat = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
bytes = "1"
schemars = { workspace = true }
