[package]
name = "baseclaw-steering"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Built-in Guards, Hints, and Trackers for the BaseClaw AI agent framework"

[dependencies]
baseclaw-core = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
serde_json = { workspace = true }
regex = "1"
