[package]
name = "baseclaw-team"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Multi-agent orchestration for BaseClaw — teams, routing, delegation, and verification chains"

[dependencies]
baseclaw-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
