[package]
name = "traitclaw-anthropic"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Anthropic provider for TraitClaw (Claude 3.5 Sonnet, Claude 3 Opus, Haiku)"

[dependencies]
traitclaw-core = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
bytes = "1"
