[package]
name = "traitclaw-anthropic"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Anthropic provider for TraitClaw (Claude 3.5 Sonnet, Claude 3 Opus, Haiku)"
readme = "README.md"
documentation = "https://docs.rs/traitclaw-anthropic"
keywords = ["ai", "agent", "anthropic", "claude", "llm"]
categories = ["api-bindings", "asynchronous"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
traitclaw-core = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
bytes = "1"

[lints]
workspace = true
