[package]
name = "traitclaw-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Core traits, types, and runtime for the TraitClaw AI Agent Framework"
readme = "README.md"
documentation = "https://docs.rs/traitclaw-core"
keywords = ["ai", "agent", "llm", "framework", "traits"]
categories = ["api-bindings", "asynchronous"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
schemars = { workspace = true }
uuid = { workspace = true }
# Optional: accurate token counting via tiktoken
tiktoken-rs = { version = "0.6", optional = true }

[features]
tiktoken = ["dep:tiktoken-rs"]

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
traitclaw-test-utils = { path = "../traitclaw-test-utils" }

[lints]
workspace = true
