[package]
name = "traitclaw-memory-sqlite"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "SQLite memory backend for TraitClaw — persistent conversations and FTS5 recall"
readme = "README.md"
documentation = "https://docs.rs/traitclaw-memory-sqlite"
keywords = ["ai", "agent", "memory", "sqlite", "persistence"]
categories = ["database"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
traitclaw-core = { workspace = true }
rusqlite = { version = "0.33", features = ["bundled"] }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
uuid = { workspace = true }

[lints]
workspace = true
