[package]
name = "traitclaw-openai"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "OpenAI provider for TraitClaw with structured output and ergonomic constructors"

[dependencies]
traitclaw-core = { workspace = true }
traitclaw-openai-compat = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
bytes = "1"
schemars = { workspace = true }

[lints]
workspace = true
