[package]
name = "tool-calling"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
traitclaw = { path = "../../crates/traitclaw" }
traitclaw-openai-compat = { path = "../../crates/traitclaw-openai-compat" }
tokio = { version = "1", features = ["full"] }
anyhow = "1"
async-trait = "0.1"
schemars = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
