[package]
name = "streaming"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
traitclaw = { path = "../../crates/traitclaw" }
traitclaw-openai-compat = { path = "../../crates/traitclaw-openai-compat" }
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
anyhow = "1"
