[package]
name = "steering"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
baseclaw = { path = "../../crates/baseclaw" }
baseclaw-openai-compat = { path = "../../crates/baseclaw-openai-compat" }
baseclaw-steering = { path = "../../crates/baseclaw-steering" }
tokio = { version = "1", features = ["full"] }
anyhow = "1"
