[package]
name = "steering"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
traitclaw = { path = "../../crates/traitclaw" }
traitclaw-openai-compat = { path = "../../crates/traitclaw-openai-compat" }
traitclaw-steering = { path = "../../crates/traitclaw-steering" }
tokio = { version = "1", features = ["full"] }
anyhow = "1"
